Bug 227555 - Preview image in Digikam is not displayed after saveas in editor
Summary: Preview image in Digikam is not displayed after saveas in editor
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Preview-Image (other bugs)
Version First Reported In: 1.2.0
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-18 19:46 UTC by Julien Narboux
Modified: 2012-06-27 10:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:
Julien: Junior_Jobs+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Narboux 2010-02-18 19:46:56 UTC
Version:           svn 1089659 (using KDE 4.3.5)
Installed from:    Ubuntu Packages

Hi,

The preview image in Digikam is not displayed after saveas in editor.

Steps to reproduce:

- Go in preview mode in DigiKam.
- Press F4 to edit a picture.
- Change something, saveas png.
- Close editor.

Now the preview in DigiKam does not appear everything is white.
If I click on a thumbnail I get the preview again.

Julien
Comment 1 Marcel Wiesweg 2010-02-22 22:00:59 UTC
SVN commit 1094482 by mwiesweg:

When the icon view is set to a Url that is not (yet) contained in the model,
this call is ignored instead of clearing current selection.
There is a better solution available using setCurrentWhenAvailable,
but this is all right for now.

BUG: 227555

 M  +2 -1      NEWS  
 M  +8 -0      digikam/imagecategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1094482