When the icon view is set to a Url that is not (yet) contained in the model, this call is ignored instead of clearing current selection. There is a better solution available using setCurrentWhenAvailable, but this is all right for now.

BUG: 227555

svn path=/trunk/extragear/graphics/digikam/; revision=1094482